// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`go-emitter byte-equivalence > crud client + types stable > crud client.go 1`] = `
"// Code generated by honey. DO NOT EDIT.

package sdk

import (
	"context"
	"encoding/json"
	"fmt"
	"io"
	"net/http"
	"net/url"
	"strings"
	"sync"
	"time"
)

var _ = fmt.Sprintf
var _ = io.Discard
var _ = strings.NewReader
var _ = sync.Mutex{}

type serviceEntry struct {
	Method     string
	Path       string
	Params     []string
	SSE        bool
	WS         bool
	Invalidate []string
}

var invalidationMap = map[string]map[string]serviceEntry{
	"users": {
		"create": {Method: "POST", Path: "/users", Params: nil, SSE: false, WS: false, Invalidate: nil},
		"delete": {Method: "DELETE", Path: "/users/{id}", Params: []string{"id"}, SSE: false, WS: false, Invalidate: nil},
		"get": {Method: "GET", Path: "/users/{id}", Params: []string{"id"}, SSE: false, WS: false, Invalidate: nil},
		"list": {Method: "GET", Path: "/users", Params: nil, SSE: false, WS: false, Invalidate: nil},
		"update": {Method: "PATCH", Path: "/users/{id}", Params: []string{"id"}, SSE: false, WS: false, Invalidate: nil},
	},
}

// Client is the generated SDK client.
type Client struct {
	cfg   Config
	stale *StaleTracker
	Users *UsersResource
}

// NewClient creates a new SDK client. BaseURL must be non-empty.
func NewClient(cfg Config) *Client {
	if cfg.BaseURL == "" {
		panic("honey sdk: Config.BaseURL must not be empty")
	}
	if cfg.HTTPClient == nil {
		cfg.HTTPClient = &http.Client{Timeout: 30 * time.Second}
	}
	if cfg.AuthHeaderName == "" {
		cfg.AuthHeaderName = "Authorization"
	}
	if cfg.AuthHeaderPrefix == "" {
		cfg.AuthHeaderPrefix = "Bearer "
	}
	c := &Client{cfg: cfg}
	c.stale = NewStaleTracker(cfg.Invalidation)
	c.Users = newUsersResource(c)
	return c
}

// IsStale reports whether (method, path) currently sits inside an active stale window.
func (c *Client) IsStale(method, path string) bool {
	if c.stale == nil { return false }
	return c.stale.IsStale(method, path)
}

type UsersResource struct {
	client *Client
}

func newUsersResource(c *Client) *UsersResource {
	r := &UsersResource{client: c}
	return r
}

// Create — Create user
func (u *UsersResource) Create(ctx context.Context, body UserCreateInput, opts *UsersCreateOpts) (*User, error) {
	q := url.Values{}
	var callHeaders map[string]string
	if opts != nil { callHeaders = opts.Headers }
	result, err := doRequest(ctx, u.client.cfg, "POST", "/users", q, body, nil, "", callHeaders, "POST /users", nil)
	if err != nil {
		return nil, err
	}
	var out User
	if len(result.body) > 0 {
		if err := json.Unmarshal(result.body, &out); err != nil { return nil, err }
	}
	return &out, nil
}

// Delete — Delete user
func (u *UsersResource) Delete(ctx context.Context, id string, opts *UsersDeleteOpts) error {
	q := url.Values{}
	var callHeaders map[string]string
	if opts != nil { callHeaders = opts.Headers }
	_, err := doRequest(ctx, u.client.cfg, "DELETE", "/users/" + url.PathEscape(id), q, nil, nil, "", callHeaders, "DELETE /users/{id}", nil)
	if err != nil {
		return err
	}
	return nil
}

// Get — Get user by id
func (u *UsersResource) Get(ctx context.Context, id string, opts *UsersGetOpts) (*User, error) {
	q := url.Values{}
	var callHeaders map[string]string
	if opts != nil { callHeaders = opts.Headers }
	result, err := doRequest(ctx, u.client.cfg, "GET", "/users/" + url.PathEscape(id), q, nil, nil, "", callHeaders, "GET /users/{id}", nil)
	if err != nil {
		return nil, err
	}
	var out User
	if len(result.body) > 0 {
		if err := json.Unmarshal(result.body, &out); err != nil { return nil, err }
	}
	return &out, nil
}

// List — List users
func (u *UsersResource) List(ctx context.Context, opts *UsersListOpts) (*[]User, error) {
	q := url.Values{}
	var callHeaders map[string]string
	if opts != nil { callHeaders = opts.Headers }
	result, err := doRequest(ctx, u.client.cfg, "GET", "/users", q, nil, nil, "", callHeaders, "GET /users", nil)
	if err != nil {
		return nil, err
	}
	var out []User
	if len(result.body) > 0 {
		if err := json.Unmarshal(result.body, &out); err != nil { return nil, err }
	}
	return &out, nil
}

// Update — Patch user
func (u *UsersResource) Update(ctx context.Context, id string, body UserPatchInput, opts *UsersUpdateOpts) (*User, error) {
	q := url.Values{}
	var callHeaders map[string]string
	if opts != nil { callHeaders = opts.Headers }
	result, err := doRequest(ctx, u.client.cfg, "PATCH", "/users/" + url.PathEscape(id), q, body, nil, "", callHeaders, "PATCH /users/{id}", nil)
	if err != nil {
		return nil, err
	}
	var out User
	if len(result.body) > 0 {
		if err := json.Unmarshal(result.body, &out); err != nil { return nil, err }
	}
	return &out, nil
}

type UsersCreateOpts struct {
	Headers map[string]string
}

type UsersDeleteOpts struct {
	Headers map[string]string
}

type UsersGetOpts struct {
	Headers map[string]string
}

type UsersListOpts struct {
	Headers map[string]string
}

type UsersUpdateOpts struct {
	Headers map[string]string
}
"
`;

exports[`go-emitter byte-equivalence > crud client + types stable > crud types.go 1`] = `
"// Code generated by honey. DO NOT EDIT.

package sdk

type ErrorEnvelope struct {
	ErrorKey string \`json:"error_key"\`
	Fields map[string][]string \`json:"fields"\`
	Message string \`json:"message"\`
	Status int64 \`json:"status"\`
	StatusKey string \`json:"status_key"\`
	Success bool \`json:"success"\`
}

type User struct {
	Email string \`json:"email"\`
	Id string \`json:"id"\`
	Name string \`json:"name"\`
}

type UserCreateInput struct {
	Email string \`json:"email"\`
	Name string \`json:"name"\`
}

type UserPatchInput struct {
	Email *string \`json:"email,omitempty"\`
	Name *string \`json:"name,omitempty"\`
}
"
`;

exports[`go-emitter byte-equivalence > discriminated client + types stable > discriminated client.go 1`] = `
"// Code generated by honey. DO NOT EDIT.

package sdk

import (
	"context"
	"encoding/json"
	"fmt"
	"io"
	"net/http"
	"net/url"
	"strings"
	"sync"
	"time"
)

var _ = fmt.Sprintf
var _ = io.Discard
var _ = strings.NewReader
var _ = sync.Mutex{}

type serviceEntry struct {
	Method     string
	Path       string
	Params     []string
	SSE        bool
	WS         bool
	Invalidate []string
}

var invalidationMap = map[string]map[string]serviceEntry{
	"animals": {
		"get": {Method: "GET", Path: "/animals/{id}", Params: []string{"id"}, SSE: false, WS: false, Invalidate: nil},
		"list": {Method: "GET", Path: "/animals", Params: nil, SSE: false, WS: false, Invalidate: nil},
	},
}

// Client is the generated SDK client.
type Client struct {
	cfg   Config
	stale *StaleTracker
	Animals *AnimalsResource
}

// NewClient creates a new SDK client. BaseURL must be non-empty.
func NewClient(cfg Config) *Client {
	if cfg.BaseURL == "" {
		panic("honey sdk: Config.BaseURL must not be empty")
	}
	if cfg.HTTPClient == nil {
		cfg.HTTPClient = &http.Client{Timeout: 30 * time.Second}
	}
	if cfg.AuthHeaderName == "" {
		cfg.AuthHeaderName = "Authorization"
	}
	if cfg.AuthHeaderPrefix == "" {
		cfg.AuthHeaderPrefix = "Bearer "
	}
	c := &Client{cfg: cfg}
	c.stale = NewStaleTracker(cfg.Invalidation)
	c.Animals = newAnimalsResource(c)
	return c
}

// IsStale reports whether (method, path) currently sits inside an active stale window.
func (c *Client) IsStale(method, path string) bool {
	if c.stale == nil { return false }
	return c.stale.IsStale(method, path)
}

type AnimalsResource struct {
	client *Client
}

func newAnimalsResource(c *Client) *AnimalsResource {
	r := &AnimalsResource{client: c}
	return r
}

// Get — Get animal
func (a *AnimalsResource) Get(ctx context.Context, id string, opts *AnimalsGetOpts) (*Animal, error) {
	q := url.Values{}
	var callHeaders map[string]string
	if opts != nil { callHeaders = opts.Headers }
	result, err := doRequest(ctx, a.client.cfg, "GET", "/animals/" + url.PathEscape(id), q, nil, nil, "", callHeaders, "GET /animals/{id}", nil)
	if err != nil {
		return nil, err
	}
	var out Animal
	if len(result.body) > 0 {
		if err := json.Unmarshal(result.body, &out); err != nil { return nil, err }
	}
	return &out, nil
}

// List — List animals
func (a *AnimalsResource) List(ctx context.Context, opts *AnimalsListOpts) (*[]Animal, error) {
	q := url.Values{}
	var callHeaders map[string]string
	if opts != nil { callHeaders = opts.Headers }
	result, err := doRequest(ctx, a.client.cfg, "GET", "/animals", q, nil, nil, "", callHeaders, "GET /animals", nil)
	if err != nil {
		return nil, err
	}
	var out []Animal
	if len(result.body) > 0 {
		if err := json.Unmarshal(result.body, &out); err != nil { return nil, err }
	}
	return &out, nil
}

type AnimalsGetOpts struct {
	Headers map[string]string
}

type AnimalsListOpts struct {
	Headers map[string]string
}
"
`;

exports[`go-emitter byte-equivalence > discriminated client + types stable > discriminated types.go 1`] = `
"// Code generated by honey. DO NOT EDIT.

package sdk

import "encoding/json"

type Animal struct {
	Type string \`json:"kind"\`
	Payload json.RawMessage \`json:"payload"\`
}

type Cat struct {
	Indoor bool \`json:"indoor"\`
	Kind string \`json:"kind"\`
}

type Dog struct {
	Breed string \`json:"breed"\`
	Kind string \`json:"kind"\`
}
"
`;

exports[`go-emitter byte-equivalence > invalidation client + types stable > invalidation client.go 1`] = `
"// Code generated by honey. DO NOT EDIT.

package sdk

import (
	"context"
	"encoding/json"
	"fmt"
	"io"
	"net/http"
	"net/url"
	"strings"
	"sync"
	"time"
)

var _ = fmt.Sprintf
var _ = io.Discard
var _ = strings.NewReader
var _ = sync.Mutex{}

type serviceEntry struct {
	Method     string
	Path       string
	Params     []string
	SSE        bool
	WS         bool
	Invalidate []string
}

var invalidationMap = map[string]map[string]serviceEntry{
	"users": {
		"create": {Method: "POST", Path: "/users", Params: nil, SSE: false, WS: false, Invalidate: []string{"GET /users", "GET /users/:id"}},
		"getById": {Method: "GET", Path: "/users/{id}", Params: []string{"id"}, SSE: false, WS: false, Invalidate: nil},
		"list": {Method: "GET", Path: "/users", Params: nil, SSE: false, WS: false, Invalidate: nil},
	},
}

// Client is the generated SDK client.
type Client struct {
	cfg   Config
	stale *StaleTracker
	Users *UsersResource
}

// NewClient creates a new SDK client. BaseURL must be non-empty.
func NewClient(cfg Config) *Client {
	if cfg.BaseURL == "" {
		panic("honey sdk: Config.BaseURL must not be empty")
	}
	if cfg.HTTPClient == nil {
		cfg.HTTPClient = &http.Client{Timeout: 30 * time.Second}
	}
	if cfg.AuthHeaderName == "" {
		cfg.AuthHeaderName = "Authorization"
	}
	if cfg.AuthHeaderPrefix == "" {
		cfg.AuthHeaderPrefix = "Bearer "
	}
	c := &Client{cfg: cfg}
	c.stale = NewStaleTracker(cfg.Invalidation)
	c.Users = newUsersResource(c)
	return c
}

// IsStale reports whether (method, path) currently sits inside an active stale window.
func (c *Client) IsStale(method, path string) bool {
	if c.stale == nil { return false }
	return c.stale.IsStale(method, path)
}

type UsersResource struct {
	client *Client
}

func newUsersResource(c *Client) *UsersResource {
	r := &UsersResource{client: c}
	return r
}

// Create — Create user
func (u *UsersResource) Create(ctx context.Context, body UserCreateInput, opts *UsersCreateOpts) (*User, error) {
	q := url.Values{}
	var callHeaders map[string]string
	if opts != nil { callHeaders = opts.Headers }
	_pathParamsMap := map[string]string(nil)
	_concretePath, _ := interpolatePath("/users", _pathParamsMap)
	_concreteSelector := "POST " + _concretePath
	var _requestMeta *RequestMeta
	if u.client.stale != nil { _requestMeta = u.client.stale.BuildRequestMeta(_concreteSelector, _concretePath, "POST") }
	result, err := doRequest(ctx, u.client.cfg, "POST", "/users", q, body, nil, "", callHeaders, "POST /users", _requestMeta)
	if err != nil {
		return nil, err
	}
	if u.client.stale != nil {
		u.client.stale.MarkStale(invalidationMap["users"]["create"].Invalidate, _pathParamsMap, _concreteSelector)
		if _requestMeta != nil && _requestMeta.IsStale {
			u.client.stale.ClearStale(_concreteSelector, _concretePath, "POST", _requestMeta.SeqSnapshot)
		}
	}
	var out User
	if len(result.body) > 0 {
		if err := json.Unmarshal(result.body, &out); err != nil { return nil, err }
	}
	return &out, nil
}

// GetById — Get user by id
func (u *UsersResource) GetById(ctx context.Context, id string, opts *UsersGetByIdOpts) (*User, error) {
	q := url.Values{}
	var callHeaders map[string]string
	if opts != nil { callHeaders = opts.Headers }
	result, err := doRequest(ctx, u.client.cfg, "GET", "/users/" + url.PathEscape(id), q, nil, nil, "", callHeaders, "GET /users/{id}", nil)
	if err != nil {
		return nil, err
	}
	var out User
	if len(result.body) > 0 {
		if err := json.Unmarshal(result.body, &out); err != nil { return nil, err }
	}
	return &out, nil
}

// List — List users
func (u *UsersResource) List(ctx context.Context, opts *UsersListOpts) (*[]User, error) {
	q := url.Values{}
	var callHeaders map[string]string
	if opts != nil { callHeaders = opts.Headers }
	result, err := doRequest(ctx, u.client.cfg, "GET", "/users", q, nil, nil, "", callHeaders, "GET /users", nil)
	if err != nil {
		return nil, err
	}
	var out []User
	if len(result.body) > 0 {
		if err := json.Unmarshal(result.body, &out); err != nil { return nil, err }
	}
	return &out, nil
}

type UsersCreateOpts struct {
	Headers map[string]string
}

type UsersGetByIdOpts struct {
	Headers map[string]string
}

type UsersListOpts struct {
	Headers map[string]string
}
"
`;

exports[`go-emitter byte-equivalence > invalidation client + types stable > invalidation types.go 1`] = `
"// Code generated by honey. DO NOT EDIT.

package sdk

type User struct {
	Email string \`json:"email"\`
	Id string \`json:"id"\`
}

type UserCreateInput struct {
	Email string \`json:"email"\`
}
"
`;

exports[`go-emitter byte-equivalence > refs client + types stable > refs client.go 1`] = `
"// Code generated by honey. DO NOT EDIT.

package sdk

import (
	"context"
	"encoding/json"
	"fmt"
	"io"
	"net/http"
	"net/url"
	"strings"
	"sync"
	"time"
)

var _ = fmt.Sprintf
var _ = io.Discard
var _ = strings.NewReader
var _ = sync.Mutex{}

type serviceEntry struct {
	Method     string
	Path       string
	Params     []string
	SSE        bool
	WS         bool
	Invalidate []string
}

var invalidationMap = map[string]map[string]serviceEntry{
	"comments": {
		"get": {Method: "GET", Path: "/comments/{id}", Params: []string{"id"}, SSE: false, WS: false, Invalidate: nil},
	},
	"users": {
		"get": {Method: "GET", Path: "/users/{id}", Params: []string{"id"}, SSE: false, WS: false, Invalidate: nil},
	},
}

// Client is the generated SDK client.
type Client struct {
	cfg   Config
	stale *StaleTracker
	Comments *CommentsResource
	Users *UsersResource
}

// NewClient creates a new SDK client. BaseURL must be non-empty.
func NewClient(cfg Config) *Client {
	if cfg.BaseURL == "" {
		panic("honey sdk: Config.BaseURL must not be empty")
	}
	if cfg.HTTPClient == nil {
		cfg.HTTPClient = &http.Client{Timeout: 30 * time.Second}
	}
	if cfg.AuthHeaderName == "" {
		cfg.AuthHeaderName = "Authorization"
	}
	if cfg.AuthHeaderPrefix == "" {
		cfg.AuthHeaderPrefix = "Bearer "
	}
	c := &Client{cfg: cfg}
	c.stale = NewStaleTracker(cfg.Invalidation)
	c.Comments = newCommentsResource(c)
	c.Users = newUsersResource(c)
	return c
}

// IsStale reports whether (method, path) currently sits inside an active stale window.
func (c *Client) IsStale(method, path string) bool {
	if c.stale == nil { return false }
	return c.stale.IsStale(method, path)
}

type CommentsResource struct {
	client *Client
}

func newCommentsResource(c *Client) *CommentsResource {
	r := &CommentsResource{client: c}
	return r
}

// Get — Get comment with self-ref parent
func (c *CommentsResource) Get(ctx context.Context, id string, opts *CommentsGetOpts) (*Comment, error) {
	q := url.Values{}
	var callHeaders map[string]string
	if opts != nil { callHeaders = opts.Headers }
	result, err := doRequest(ctx, c.client.cfg, "GET", "/comments/" + url.PathEscape(id), q, nil, nil, "", callHeaders, "GET /comments/{id}", nil)
	if err != nil {
		return nil, err
	}
	var out Comment
	if len(result.body) > 0 {
		if err := json.Unmarshal(result.body, &out); err != nil { return nil, err }
	}
	return &out, nil
}

type UsersResource struct {
	client *Client
}

func newUsersResource(c *Client) *UsersResource {
	r := &UsersResource{client: c}
	return r
}

// Get — Get user with comments
func (u *UsersResource) Get(ctx context.Context, id string, opts *UsersGetOpts) (*User, error) {
	q := url.Values{}
	var callHeaders map[string]string
	if opts != nil { callHeaders = opts.Headers }
	result, err := doRequest(ctx, u.client.cfg, "GET", "/users/" + url.PathEscape(id), q, nil, nil, "", callHeaders, "GET /users/{id}", nil)
	if err != nil {
		return nil, err
	}
	var out User
	if len(result.body) > 0 {
		if err := json.Unmarshal(result.body, &out); err != nil { return nil, err }
	}
	return &out, nil
}

type CommentsGetOpts struct {
	Headers map[string]string
}

type UsersGetOpts struct {
	Headers map[string]string
}
"
`;

exports[`go-emitter byte-equivalence > refs client + types stable > refs types.go 1`] = `
"// Code generated by honey. DO NOT EDIT.

package sdk

type Comment struct {
	Author *User \`json:"author,omitempty"\`
	Body string \`json:"body"\`
	Id string \`json:"id"\`
	Parent *Comment \`json:"parent,omitempty"\`
}

type User struct {
	Comments []Comment \`json:"comments,omitempty"\`
	Email string \`json:"email"\`
	Id string \`json:"id"\`
}
"
`;

exports[`go-emitter byte-equivalence > reserved-words client + types stable > reserved-words client.go 1`] = `
"// Code generated by honey. DO NOT EDIT.

package sdk

import (
	"context"
	"encoding/json"
	"fmt"
	"io"
	"net/http"
	"net/url"
	"strconv"
	"strings"
	"sync"
	"time"
)

var _ = fmt.Sprintf
var _ = io.Discard
var _ = strings.NewReader
var _ = sync.Mutex{}

type serviceEntry struct {
	Method     string
	Path       string
	Params     []string
	SSE        bool
	WS         bool
	Invalidate []string
}

var invalidationMap = map[string]map[string]serviceEntry{
	"await": {
		"yield": {Method: "POST", Path: "/await/yield", Params: nil, SSE: false, WS: false, Invalidate: nil},
	},
	"class": {
		"from": {Method: "GET", Path: "/class/from", Params: nil, SSE: false, WS: false, Invalidate: nil},
	},
}

// Client is the generated SDK client.
type Client struct {
	cfg   Config
	stale *StaleTracker
	Await *AwaitResource
	Class *ClassResource
}

// NewClient creates a new SDK client. BaseURL must be non-empty.
func NewClient(cfg Config) *Client {
	if cfg.BaseURL == "" {
		panic("honey sdk: Config.BaseURL must not be empty")
	}
	if cfg.HTTPClient == nil {
		cfg.HTTPClient = &http.Client{Timeout: 30 * time.Second}
	}
	if cfg.AuthHeaderName == "" {
		cfg.AuthHeaderName = "Authorization"
	}
	if cfg.AuthHeaderPrefix == "" {
		cfg.AuthHeaderPrefix = "Bearer "
	}
	c := &Client{cfg: cfg}
	c.stale = NewStaleTracker(cfg.Invalidation)
	c.Await = newAwaitResource(c)
	c.Class = newClassResource(c)
	return c
}

// IsStale reports whether (method, path) currently sits inside an active stale window.
func (c *Client) IsStale(method, path string) bool {
	if c.stale == nil { return false }
	return c.stale.IsStale(method, path)
}

type AwaitResource struct {
	client *Client
}

func newAwaitResource(c *Client) *AwaitResource {
	r := &AwaitResource{client: c}
	return r
}

// Yield — More reserved words as resource and action
func (a *AwaitResource) Yield(ctx context.Context, body json.RawMessage, opts *AwaitYieldOpts) (*json.RawMessage, error) {
	q := url.Values{}
	var callHeaders map[string]string
	if opts != nil { callHeaders = opts.Headers }
	result, err := doRequest(ctx, a.client.cfg, "POST", "/await/yield", q, body, nil, "", callHeaders, "POST /await/yield", nil)
	if err != nil {
		return nil, err
	}
	var out json.RawMessage
	if len(result.body) > 0 {
		if err := json.Unmarshal(result.body, &out); err != nil { return nil, err }
	}
	return &out, nil
}

type ClassResource struct {
	client *Client
}

func newClassResource(c *Client) *ClassResource {
	r := &ClassResource{client: c}
	return r
}

// From — Both parts are Python reserved words
func (c *ClassResource) From(ctx context.Context, opts *ClassFromOpts) (*string, error) {
	q := url.Values{}
	if opts != nil && opts.Async != nil { q.Set("async", strconv.FormatBool(*opts.Async)) }
	if opts != nil && opts.Return != nil { q.Set("return", *opts.Return) }
	var callHeaders map[string]string
	if opts != nil { callHeaders = opts.Headers }
	result, err := doRequest(ctx, c.client.cfg, "GET", "/class/from", q, nil, nil, "", callHeaders, "GET /class/from", nil)
	if err != nil {
		return nil, err
	}
	var out string
	if len(result.body) > 0 {
		if err := json.Unmarshal(result.body, &out); err != nil { return nil, err }
	}
	return &out, nil
}

type AwaitYieldOpts struct {
	Headers map[string]string
}

type ClassFromOpts struct {
	Async *bool
	Return *string
	Headers map[string]string
}
"
`;

exports[`go-emitter byte-equivalence > reserved-words client + types stable > reserved-words types.go 1`] = `
"// Code generated by honey. DO NOT EDIT.

package sdk

"
`;

exports[`go-emitter byte-equivalence > sse client + types stable > sse client.go 1`] = `
"// Code generated by honey. DO NOT EDIT.

package sdk

import (
	"context"
	"encoding/json"
	"fmt"
	"io"
	"iter"
	"net/http"
	"net/url"
	"strings"
	"sync"
	"time"
)

var _ json.RawMessage
var _ = fmt.Sprintf
var _ = io.Discard
var _ = strings.NewReader
var _ = sync.Mutex{}

type serviceEntry struct {
	Method     string
	Path       string
	Params     []string
	SSE        bool
	WS         bool
	Invalidate []string
}

var invalidationMap = map[string]map[string]serviceEntry{
	"events": {
		"stream": {Method: "GET", Path: "/events/stream", Params: nil, SSE: true, WS: false, Invalidate: nil},
	},
}

// Client is the generated SDK client.
type Client struct {
	cfg   Config
	stale *StaleTracker
	Events *EventsResource
}

// NewClient creates a new SDK client. BaseURL must be non-empty.
func NewClient(cfg Config) *Client {
	if cfg.BaseURL == "" {
		panic("honey sdk: Config.BaseURL must not be empty")
	}
	if cfg.HTTPClient == nil {
		cfg.HTTPClient = &http.Client{Timeout: 30 * time.Second}
	}
	if cfg.AuthHeaderName == "" {
		cfg.AuthHeaderName = "Authorization"
	}
	if cfg.AuthHeaderPrefix == "" {
		cfg.AuthHeaderPrefix = "Bearer "
	}
	c := &Client{cfg: cfg}
	c.stale = NewStaleTracker(cfg.Invalidation)
	c.Events = newEventsResource(c)
	return c
}

// IsStale reports whether (method, path) currently sits inside an active stale window.
func (c *Client) IsStale(method, path string) bool {
	if c.stale == nil { return false }
	return c.stale.IsStale(method, path)
}

type EventsResource struct {
	client *Client
}

func newEventsResource(c *Client) *EventsResource {
	r := &EventsResource{client: c}
	return r
}

// Stream — Stream events
func (e *EventsResource) Stream(ctx context.Context, opts *EventsStreamOpts) iter.Seq2[SSEEvent, error] {
	return func(yield func(SSEEvent, error) bool) {
		q := url.Values{}
		if opts != nil && opts.Topic != nil { q.Set("topic", *opts.Topic) }
		callHeaders := map[string]string{"Accept": "text/event-stream"}
		if opts != nil && opts.LastEventID != "" {
			callHeaders["Last-Event-ID"] = opts.LastEventID
		}
		if opts != nil {
			for k, v := range opts.Headers { callHeaders[k] = v }
		}
		req, err := http.NewRequestWithContext(ctx, "GET", e.client.cfg.BaseURL+"/events/stream"+"?"+q.Encode(), nil)
		if err != nil { yield(SSEEvent{}, err); return }
		for k, v := range e.client.cfg.Headers { req.Header.Set(k, v) }
		for k, v := range callHeaders { req.Header.Set(k, v) }
		if e.client.cfg.BearerToken != "" { req.Header.Set(e.client.cfg.AuthHeaderName, e.client.cfg.AuthHeaderPrefix+e.client.cfg.BearerToken) }
		resp, err := e.client.cfg.HTTPClient.Do(req)
		if err != nil { yield(SSEEvent{}, err); return }
		for ev, err := range parseSSEStream(ctx, resp) {
			if !yield(ev, err) { return }
		}
	}
}

type EventsStreamOpts struct {
	LastEventId *string
	Topic *string
	LastEventID string
	Headers map[string]string
}
"
`;

exports[`go-emitter byte-equivalence > sse client + types stable > sse types.go 1`] = `
"// Code generated by honey. DO NOT EDIT.

package sdk

"
`;

exports[`go-emitter byte-equivalence > ws client + types stable > ws client.go 1`] = `
"// Code generated by honey. DO NOT EDIT.

package sdk

import (
	"context"
	"encoding/json"
	"fmt"
	"io"
	"net/http"
	"net/url"
	"strings"
	"sync"
	"time"

	"nhooyr.io/websocket"
)

var _ json.RawMessage
var _ = fmt.Sprintf
var _ = io.Discard
var _ = strings.NewReader
var _ = sync.Mutex{}

type serviceEntry struct {
	Method     string
	Path       string
	Params     []string
	SSE        bool
	WS         bool
	Invalidate []string
}

var invalidationMap = map[string]map[string]serviceEntry{
	"realtime": {
		"subscribe": {Method: "GET", Path: "/realtime/subscribe", Params: nil, SSE: false, WS: true, Invalidate: nil},
	},
}

// Client is the generated SDK client.
type Client struct {
	cfg   Config
	stale *StaleTracker
	Realtime *RealtimeResource
}

// NewClient creates a new SDK client. BaseURL must be non-empty.
func NewClient(cfg Config) *Client {
	if cfg.BaseURL == "" {
		panic("honey sdk: Config.BaseURL must not be empty")
	}
	if cfg.HTTPClient == nil {
		cfg.HTTPClient = &http.Client{Timeout: 30 * time.Second}
	}
	if cfg.AuthHeaderName == "" {
		cfg.AuthHeaderName = "Authorization"
	}
	if cfg.AuthHeaderPrefix == "" {
		cfg.AuthHeaderPrefix = "Bearer "
	}
	c := &Client{cfg: cfg}
	c.stale = NewStaleTracker(cfg.Invalidation)
	c.Realtime = newRealtimeResource(c)
	return c
}

// IsStale reports whether (method, path) currently sits inside an active stale window.
func (c *Client) IsStale(method, path string) bool {
	if c.stale == nil { return false }
	return c.stale.IsStale(method, path)
}

type RealtimeResource struct {
	client *Client
}

func newRealtimeResource(c *Client) *RealtimeResource {
	r := &RealtimeResource{client: c}
	return r
}

// Subscribe — Subscribe to realtime updates
func (r *RealtimeResource) Subscribe(ctx context.Context, opts *RealtimeSubscribeOpts) (*TypedWebSocket, error) {
	q := url.Values{}
	if opts != nil { q.Set("channel", opts.Channel) }
	if opts != nil && opts.ReconnectToken != "" { q.Set("reconnect_token", opts.ReconnectToken) }
	wsURL := r.client.cfg.BaseURL + "/realtime/subscribe"
	if len(q) > 0 { wsURL += "?" + q.Encode() }
	dialOpts := &websocket.DialOptions{}
	if opts != nil && len(opts.Protocols) > 0 { dialOpts.Subprotocols = opts.Protocols }
	if opts != nil && len(opts.Headers) > 0 {
		dialOpts.HTTPHeader = http.Header{}
		for k, v := range opts.Headers { dialOpts.HTTPHeader.Set(k, v) }
	}
	conn, _, err := websocket.Dial(ctx, wsURL, dialOpts)
	if err != nil { return nil, err }
	return newTypedWebSocket(conn), nil
}

type RealtimeSubscribeOpts struct {
	Channel string
	ReconnectToken *string
	ReconnectToken string
	Protocols []string
	Headers map[string]string
}
"
`;

exports[`go-emitter byte-equivalence > ws client + types stable > ws types.go 1`] = `
"// Code generated by honey. DO NOT EDIT.

package sdk

"
`;
